rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    servicebroker: sb-instanceid-rabbitmq
  name: sb-instanceid-rabbitmq
spec:
  ports:
  - port: 5672
    name: mq
  - port: 15672
    name: admin
  selector:
    servicebroker: sb-instanceid-rabbitmq
