rabbitmq-route.yaml
#Route for admin
apiVersion: v1
kind: Route
metadata:
  name: sb-instanceid-rabbitmq
  labels:
    servicebroker: sb-instanceid-rabbitmq
spec:
  host: sb-instanceid-rabbitmq.app.asiainfodata.com
  port:
    targetPort: admin
  to:
    kind: Service
    name: sb-instanceid-rabbitmq
